--- a/PCmonitoring/PCmonitoring.csproj
+++ b/PCmonitoring/PCmonitoring.csproj
@@ -48,9 +48,6 @@
     <Reference Include="MetroFramework.Fonts, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
     </Reference>
-    <Reference Include="OpenHardwareMonitorLib">
-      <HintPath>..\..\..\..\..\..\OpenHardwareMonitor\OpenHardwareMonitorLib.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
@@ -68,10 +65,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\batteryInfo.cs" />
-    <Compile Include="Classes\diskInfo.cs" />
-    <Compile Include="Classes\CPUinfo.cs" />
-    <Compile Include="Classes\RAMinfo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +102,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\MonitoringLibrary.csproj">
+      <Project>{23004fa9-128b-4843-bf5d-e942ac9988aa}</Project>
+      <Name>MonitoringLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
